dark mode fixed

--- a/public/styles/_darkmode.scss
+++ b/public/styles/_darkmode.scss
@@ -1,5 +1,5 @@
 // Bron: https://css-tricks.com/dark-modes-with-css/
-@media (prefers-color-scheme: dark) {
+.dark-mode {
     p {
         color: $lila;
     }
@@ -49,12 +49,8 @@
     }
 
     // Single
-    .body-single {
+    .div-single {
         background-color: $dark-purple;
-
-        footer {
-            padding-bottom: 50px;
-        }
     }
 
     .main-single {
@@ -66,6 +62,13 @@
     .related-blogs {
         h4 {
             color: $lila;
+        }
+    }
+
+    // Breakpoint
+    @media (min-width: 992px) {
+        footer {
+            background-color: transparent;
         }
     }
 }
